Fixed Vertical Alignement

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#intro
+#intros
 {
 	position: absolute;
 	top:50%;
@@ -11,6 +11,18 @@
 	overflow: visible;
 	align-items: center;
   	justify-content: center; 
+}
+#intro
+{
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	min-height: 230px;
+	color: #FFFFFF;
+	padding: 30px 0px;
+	position: absolute;
+	top: 50%;
+	left:0px;	
+	transform: translateY(-50%);
 }
 #intro h1
 {
@@ -65,6 +77,6 @@
 {
     text-align: center;
     left: 50%;
-    margin-right: -50%;    
-    transform: translate(-50%, 0%);
+    margin-right: -50%;
+    transform: translateX(-50%);
 }
